<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="?attr/background"
    tools:context=".SplashScreen">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_basic"
        android:textColor="#000000"
        android:textAlignment="center"
        android:textSize="40dp"
        android:layout_gravity="center"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/enterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:layout_gravity="center"
        android:hint="Please enter your name"
        android:textColorHint="#000000"
        android:textColor="#000000"
        android:inputType="text" />
    <Button
        android:id="@+id/enter"
        android:layout_width="175dp"
        android:layout_height="58dp"
        android:background="#FF9F39"
        android:layout_gravity="center"
        android:text="@string/enter"
        android:textColor="#000000"
        android:textStyle="bold"
        android:onClick="onEnter"/>

    <ImageView
        android:id="@+id/basic_logo_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/basic_logo"
        android:contentDescription="TODO" />



</LinearLayout>