package edu.quinnipiac.ser210.basiconlineandroid;

//@RunWith(AndroidJUnit4.class)

//public class UserNameTest {
//
//    @Rule
//    public ActivityTestRule <HomeScreen> homeScreenTestRule =
//            new ActivityTestRule<>(HomeScreen.class);
//
//
//
//    @Test
//    public void getUserName() {
//       // onView(withId(R.id.welcomeName)).perform(Type)
//
//        //onView(withId(R.id.enterName)).perform(typeText("Ellsworth"), ViewActions.closeSoftKeyboard());
//
//
//        Espresso.onView(withText("Welcome to BASIC")).perform(click());
//        String expected = "Welcome to BASIC Alexandra";
//
//        onView(withId(R.id.welcomeName)).check(matches(withText(expected)));
//
//    }
//}